Added Tesseract OCR Korean language settings to preferences.

--- a/Miharu Scan Helper/App.config
+++ b/Miharu Scan Helper/App.config
@@ -26,13 +26,19 @@
                       <value>True</value>
                </setting>
                <setting name="DisabledTranslationSources" serializeAs="String">
-                      <value/>
+                      <value />
                </setting>
                <setting name="WarnTextDeletion" serializeAs="String">
                       <value>True</value>
                </setting>
                <setting name="UseScreenDPI" serializeAs="String">
                       <value>False</value>
+               </setting>
+               <setting name="TesseractSourceLanguage" serializeAs="String">
+                      <value>Japanese</value>
+               </setting>
+               <setting name="TranslationTargetLanguage" serializeAs="String">
+                      <value>English</value>
                </setting>
         </Miharu.Properties.Settings>
     </userSettings>
